# fast_aurelian

./: .gitignore  CLAUDE.md  INDEXING_STRATEGY.md  README.md  architecture.md  pyproject.toml  pytest.ini  tasks.md
scripts/: check.sh  dev.sh  format.sh  lint.sh  test.sh
src/fast_aurelian/: __init__.py  config.py  main.py
src/fast_aurelian/api/: __init__.py  models.py  paperqa.py  routes.py
src/fast_aurelian/middleware/: logging.py
src/fast_aurelian/services/: paperqa.py
tests/: integration.py
