[project]
name = "fast-aurelian"
version = "0.1.0"
description = "FastAPI-based service that exposes Aurelian agents and tools through a REST API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    # Aurelian itself isn't on PyPI yet, so you'll need to install it separately:
    # pip install git+https://github.com/monarch-initiative/aurelian.git
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.7.0",
    "httpx>=0.25.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fast_aurelian"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
fast-aurelian = "fast_aurelian.main:app"
